# study-fastapi

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: items.py
app/db/: database.py  models.py  schemas.py
app/infra/db/: database.py  models.py  schemas.py
app/infra/migration/: env.py
app/infra/migration/versions/: 2022_12_31_1457-b72a0f92a01e_create_account_table.py
