[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.87.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
sqlalchemy = "^1.4.44"
aiomysql = "^0.1.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.991"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
